--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:9000"
+  "proxy": "http://localhost:9000",
+  "devDependencies": {
+    "concurrently": "^5.3.0"
+  }
 }
