--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "tape": "^5.0.1",
     "web-vitals": "^0.2.4",
     "webp-converter": "^2.3.0"
   },
@@ -47,8 +48,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:9000",
-  "devDependencies": {
-    "concurrently": "^5.3.0"
-  }
+  "proxy": "http://localhost:9000"
 }
